--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -21,40 +22,8 @@ header{
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.centralizar {
-    text-align: center;
-}
-
-.fonte {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.margemtit {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.imgtamanho {
-    width: 25%;
-    margin-top: 20px;
-}
-
-.imgtamanho2 {
-    width: 35%;
-    margin-top: 20px;
-    margin-bottom: 15px;
-}
-
-.fundocor {
-    background-color: rgb(205, 202, 202);
-}
-
-.tamanho {
-    font-size: 1.5em;
-}
-
-.margemtop {
-    margin-top: 20px;
+.botcabecalho:hover{
+    color: firebrick;
 }
 
 footer {
@@ -87,6 +56,46 @@ footer {
     color: white;
 }
 
+.centralizar {
+    text-align: center;
+}
+
+.imgtamanhog {
+    width: 70%;
+}
+
+.margemtop {
+    margin-top: 15px;
+}
+
 .margembaixa {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+}
+
+.fonte {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.tamanhotxt {
+    font-size: 1em;
+}
+
+.tamanhotxt2 {
+    font-size: 2.5em;
+}
+
+.fundopreto {
+    background-color: black;
+}
+
+.txtvermelho {
+    color: red;
+}
+
+.imgtamanhop {
+    width: 35%;
+}
+
+.margemdireita {
+    margin-right: 15px;
 }
